infrastructure/kyverno/policies/exception_system-namespaces.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: PolicyException
metadata:
  name: system-namespaces
  namespace: kyverno
spec:
  policyRefs:
    - name: require-labels
      kind: ValidatingPolicy
  matchConditions:
    - name: exclude-system-namespaces
      expression: "object.metadata.namespace in ['kube-system', 'flux-system', 'cert-manager', 'kyverno']"
  reportResult: skip
