infrastructure/kyverno/tests/validating_require-labels/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-labels
  labels:
    app.kubernetes.io/name: test-app
    app.kubernetes.io/instance: deployment-latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: app
        image: nginx:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-without-labels
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: app
        image: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coredns
  namespace: kube-system
  labels:
    k8s-app: kube-dns
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: kube-dns
  template:
    metadata:
      labels:
        k8s-app: kube-dns
